--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "blink"
-version = "0.1.0"
+version = "0.2.0rc0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -16,7 +16,7 @@ dev = [
 ]
 
 [bumpver]
-current_version = "0.1.0"
+current_version = "0.2.0rc0"
 version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
 commit = true
 tag = true
