--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -95,7 +95,11 @@ jobs:
       - name: Download firmware builds
         uses: actions/download-artifact@v4
         with:
+          merge-multiple: true
           path: build/
+
+      - name: Show downloaded artifacts
+        run: ls ./build/
 
       - name: Make Release
         uses: softprops/action-gh-release@v2
